--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>风格定制-Bootstrap样例1</title>
+    <title>进程管理系统</title>
     <!-- Bootstrap css -->
     <link href="https://magicbox.bk.tencent.com/static_api/v3/assets/bootstrap-3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="{% static 'css/bootstrap-table.min.css' %}" rel="stylesheet">
