--- a/supervisor/templates/supervisor/node_detail.html
+++ b/supervisor/templates/supervisor/node_detail.html
@@ -47,13 +47,13 @@
                 <div id="toolbar">
                     <div class="btn-group">
                         <div class="btn-group">
-                            <button id="RestartSelect" class="RoleOfRestart btn btn-default king-success">
+                            <button id="RestartSelect" class="btn btn-default king-success" data-toggle="tooltip" title="重启选中的进程">
                                 <i class="fa fa-refresh btn-icon"></i>
                             </button>
-                            <button id="StopSelect" class="RoleOfStop btn btn-default king-warning">
+                            <button id="StopSelect" class="btn btn-default king-warning" data-toggle="tooltip" title="关闭选中的进程">
                                 <i class="fa fa-toggle-on btn-icon"></i>
                             </button>
-                            <button id="StartSelect" class="RoleOfStart btn btn-default king-info">
+                            <button id="StartSelect" class="btn btn-default king-info" data-toggle="tooltip" title="启动选中的进程">
                                 <i class="fa fa-toggle-off btn-icon"></i>
                             </button>
                         </div>
@@ -153,13 +153,13 @@
                 if (row['StateCode'] > 0 && row['StateCode'] < 30) {
                     return [
                         '<div class="btn-group">\n' +
-                        '    <button class="RoleOfRestart btn btn-default king-success">\n' +
+                        '    <button class="RoleOfRestart btn btn-default king-success" data-toggle="tooltip" title="重启">\n' +
                         '        <i class="fa fa-refresh btn-icon"></i>\n' +
                         '    </button>\n' +
-                        '    <button class="RoleOfStop btn btn-default king-warning">\n' +
+                        '    <button class="RoleOfStop btn btn-default king-warning" data-toggle="tooltip" title="关闭">\n' +
                         '        <i class="fa fa-toggle-on btn-icon"></i>\n' +
                         '    </button>\n' +
-                        '    <button class="RoleOfLog btn btn-default king-info">\n' +
+                        '    <button class="RoleOfLog btn btn-default king-info" data-toggle="tooltip" title="catalina.out">\n' +
                         '        <i class="fa fa-file-text btn-icon"></i>\n' +
                         '    </button>\n' +
                         '</div>',
@@ -167,13 +167,13 @@
                 }else {
                     return [
                         '<div class="btn-group">\n' +
-                        '    <button class="RoleOfRestart btn btn-default king-success">\n' +
+                        '    <button class="RoleOfRestart btn btn-default king-success" data-toggle="tooltip" title="重启">\n' +
                         '        <i class="fa fa-refresh btn-icon"></i>\n' +
                         '    </button>\n' +
-                        '    <button class="RoleOfStart btn btn-default king-success" title="启动">\n' +
+                        '    <button class="RoleOfStart btn btn-default king-success" data-toggle="tooltip" title="启动">\n' +
                         '        <i class="fa fa-toggle-off btn-icon"></i>\n' +
                         '    </button>\n' +
-                        '    <button class="RoleOfLog btn btn-default king-info" title="日志">\n' +
+                        '    <button class="RoleOfLog btn btn-default king-info" data-toggle="tooltip" title="catalina.out">\n' +
                         '        <i class="fa fa-file-text btn-icon"></i>\n' +
                         '    </button>\n' +
                         '</div>',
@@ -360,12 +360,16 @@
         },
         onLoadError: function (status) {
             console.log(status);
-            $('#node_list').bootstrapTable('removeAll');
+            $('#process_list').bootstrapTable('removeAll');
+        },
+        onPostBody: function (data) {
+            $(function () { $("[data-toggle='tooltip']").tooltip(); });
         }
     });
     };
     $(document).ready(function(){
             createProcessTable();
+            $(function () { $("[data-toggle='tooltip']").tooltip(); });
               $.ajaxSetup({
                    data: {csrfmiddlewaretoken: '{{ csrf_token }}' },
               });
